--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
     --fuenteParrafos: 'Open Sans', sans-serif;
 
     --primario: #784D3C;
-    --blaco: #ffffff;
+    --gris: #e1e1e1;
+    --blanco: #ffffff;
     --negro: #000000;
 
 }
@@ -62,7 +63,7 @@ img {
 /** Utilidades **/
 
 .no-margin {
-   margin: 0; 
+    margin: 0; 
 }
 
 .no-padding {
@@ -85,7 +86,7 @@ img {
 
 .header__texto {
     text-align: center;
-    color: var(--blaco);
+    color: var(--blanco);
     margin-top: 5rem;
 }
 
@@ -104,7 +105,7 @@ img {
 }
 
 .logo {
-    color: var(--blaco);
+    color: var(--blanco);
 
 }
 
@@ -118,16 +119,16 @@ img {
 
 @media (min-width: 768px) {
     .navegacion {
-     display: flex;
-     gap: 2rem;
+        display: flex;
+        gap: 2rem;
     } 
- }
+}
 
 .navegacion__enlace {
     display: block;
     text-align: center;
     font-size: 1.8rem;
-    color: var(--blaco);
+    color: var(--blanco);
 }
 
 @media (min-width: 768px) {
@@ -136,4 +137,36 @@ img {
         grid-template-columns: 2fr 1fr;
         column-gap: 4rem;
     }
+}
+
+.entrada {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+    }
+}
+
+.boton--primario {
+    background-color: var(--negro);
 }
