--- a/css/styles.css
+++ b/css/styles.css
@@ -246,3 +246,12 @@ img {
 .curso:last-of-type {
     border: none;
 }
+
+/** Contacto **/
+
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
